# e310x-playground

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
e310x-barebones/: .gitignore  Cargo.toml  README.md  asm.S  build.rs  gdb_init  link.x  link.x.bk  memory.x
e310x-barebones/.cargo/: config.toml
e310x-barebones/src/: lib.rs  main.rs
with_hal/: Cargo.toml
without_hal/: Cargo.toml
without_hal/src/: lib.rs
