[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
# Provides startup code and useful attributes
# https://docs.rs/riscv-rt
riscv-rt = "0.11"

# Provides low-level access to registers and assembly instructions
# https://docs.rs/riscv
riscv = { version = "0.10", features = ["critical-section-single-hart"] }

# Efficient logging framework
# https://docs.rs/rtt-target
rtt-target = "0.4"

# Efficient logging framework
# https://docs.rs/defmt
# defmt = "0.3"

# Transmit defmt log messages over the RTT (Real-Time Transfer) protocol
# https://docs.rs/defmt-rtt
# defmt-rtt = "0.4"

# jlink_rtt = "0.2"