[package]
name = "e310x-playground"
version = "0.1.0"
authors = ["Yusef Karim <yusefkarim@riseup.net>"]
edition = "2018"

[dependencies]
# Provides startup code and useful attributes
# https://docs.rs/riscv-rt
# riscv-rt = "0.8"

# Provides low-level access to registers and assembly instructions
# https://docs.rs/riscv
# riscv = "0.6"

# Set the panicking behavior to halt the CPU
# https://docs.rs/crate/panic-halt
# panic-halt = "0.2.0"

# Peripheral access API for FE310
# https://docs.rs/e310x
# e310x = {version = "0.9", features = ["rt"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
